# python-newtype-dev

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  Makefile2  README.md  TODOS  _newtype.md  build.py  conftest.py  mkdocs.yml  netlify.toml  newtype.py  newtype_init.c  newtype_init.h  newtype_meth.c  newtype_meth.h  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  test_async.py  test_custom_type.py  test_freestanding.py  test_newtype.py  test_newtype_init.py  test_newtype_meth.py  test_newtype_str.py  test_slots.py
.github/workflows/: build_wheels.yaml  tests.yml
docs/: README.md  index.md
docs/about/: changelog.md  license.md
docs/advanced-topics/: method-interception.md  type-inheritance.md
docs/api/: extensions.md  newtype.md
docs/development/: building.md  contributing.md  performance.md  testing.md
examples/: bounded_wrapped_ints.py  demo.py  email_str.py  mutable.py  newtype_enums.py  newtype_enums_int.py  pydantic-compat.py
newtype/: __init__.py  newtype.py
tests/: Dockerfile  Dockerfile-test-mul-vers  Dockerfile-test-py3.10  Dockerfile-test-py3.11  Dockerfile-test-py3.12  Dockerfile-test-py3.8  Dockerfile-test-py3.9  _test_mixed_slots_dict.py  build_test_pyvers_docker_images.sh  test_advanced_examples.py  test_async.py  test_basic_examples.py  test_custom_type.py  test_freestanding.py  test_method_interception.py  test_mutable.py  test_newtype.py  test_newtype_enums.py  test_newtype_exclude.py  test_newtype_init.py  test_newtype_meth.py  test_newtype_str.py  test_real_world.py  test_slots.py
(+20 files in other folders)
